@@ -4,6 +4,7 @@ use Mojo::Base -base;
 
 has 'token';
 has 'until';
+has 'record' => 0;
 has 'app';
 
 =head1 NAME
@@ -102,6 +103,21 @@ sub to_hash {
 =back
 
 =cut
+
+sub delete {
+    my $c = shift;
+
+    $c->app->dbi->db->query('DELETE FROM sessions WHERE token = ?', $c->token);
+    my $h = $c->app->dbi->db->query('SELECT * FROM sessions WHERE token = ?', $c->token)->hashes;
+    if ($h->size) {
+        # We found the session, it hasn't been deleted
+        return 0;
+    } else {
+        $c = Lstu::DB::Session->new(app => $c->app);
+        # We didn't found the session, it has been deleted
+        return 1;
+    }
+}
 
 =head2 write
 
