@@ -2,8 +2,6 @@
 package Lstu::DB::URL::SQLite;
 use Mojo::Base 'Lstu::DB::URL';
 
-has 'record' => 0;
-
 sub new {
     my $c = shift;
 
@@ -12,31 +10,6 @@ sub new {
     $c = $c->_slurp if ($c->short || $c->url);
 
     return $c;
-}
-
-sub increment_counter {
-    my $c = shift;
-
-    $c->app->dbi->db->query('UPDATE lstu SET counter = counter + 1 WHERE short = ?', $c->short);
-    my $h = $c->app->dbi->db->query('SELECT counter FROM lstu WHERE short = ?', $c->short)->hashes->first;
-    $c->counter($h->{counter});
-
-    return $c;
-}
-
-sub delete {
-    my $c = shift;
-
-    $c->app->dbi->db->query('DELETE FROM lstu WHERE short = ?', $c->short);
-    my $h = $c->app->dbi->db->query('SELECT * FROM lstu WHERE short = ?', $c->short)->hashes;
-    if ($h->size) {
-        # We found the URL, it hasn't been deleted
-        return 0;
-    } else {
-        $c = Lstu::DB::URL->new(app => $c->app);
-        # We didn't found the URL, it has been deleted
-        return 1;
-    }
 }
 
 1;
